--- a/src/screens/App/Map/MapScreen.module.css
+++ b/src/screens/App/Map/MapScreen.module.css
@@ -1,204 +1,249 @@
-/* global styling */
-.leaflet-control-geosearch *,
-.leaflet-control-geosearch *:before,
-.leaflet-control-geosearch *:after {
+/* Basics */
+.mapboxgl-ctrl-geocoder,
+.mapboxgl-ctrl-geocoder *,
+.mapboxgl-ctrl-geocoder *:after,
+.mapboxgl-ctrl-geocoder *:before {
   box-sizing: border-box;
 }
 
-/* leaflet button styling */
-.leaflet-control-geosearch .leaflet-bar-part {
-  border-radius: 4px;
-  border-bottom: none;
-}
-
-.leaflet-control-geosearch a.leaflet-bar-part:before,
-.leaflet-control-geosearch a.leaflet-bar-part:after {
-  position: absolute;
-  display: block;
-  content: '';
-}
-
-/* magnifying glass */
-.leaflet-control-geosearch a.leaflet-bar-part:before {
-  top: 19px;
-  left: 16px;
-  width: 8px;
-  border-top: 2px solid #555;
-  transform: rotateZ(45deg);
-}
-
-.leaflet-control-geosearch a.leaflet-bar-part:after {
-  top: 6px;
-  left: 6px;
-  height: 14px;
-  width: 14px;
-  border-radius: 50%;
-  border: 2px solid #555;
-}
-
-/* resets for pending and error icons */
-.leaflet-control-geosearch.error a.leaflet-bar-part:before,
-.leaflet-control-geosearch.pending a.leaflet-bar-part:before {
-  display: none;
-}
-
-.leaflet-control-geosearch.pending a.leaflet-bar-part:after,
-.leaflet-control-geosearch.error a.leaflet-bar-part:after {
-  left: 50%;
-  top: 50%;
-  width: 18px;
-  height: 18px;
-  margin: -9px 0 0 -9px;
-  border-radius: 50%;
-}
-
-/* pending icon */
-.leaflet-control-geosearch.pending a.leaflet-bar-part:after {
-  content: '';
-  border: 2px solid #555;
-  border-top: 2px solid #f3f3f3;
-  animation: spin 1s linear infinite;
-}
-
-/* error icon */
-.leaflet-control-geosearch.error a.leaflet-bar-part:after {
-  content: '!';
-  line-height: initial;
-  font-weight: 600;
+.mapboxgl-ctrl-geocoder {
   font-size: 18px;
-  border: none;
-}
-
-/* search form styling */
-.leaflet-control-geosearch form {
-  display: none;
-  position: absolute;
-  top: -2px;
-  left: 28px;
-  border-radius: 0 4px 4px 0;
-  border: 2px solid rgba(0, 0, 0, 0.2);
-  border-left: none;
-  background-color: #fff;
-  background-clip: padding-box;
-  z-index: -1;
-  height: auto;
-  margin: 0;
-  padding: 0 8px;
-}
-
-.leaflet-control-geosearch.active form {
-  display: block;
-}
-
-.leaflet-control-geosearch form input {
-  min-width: 200px;
-  width: 100%;
-  border: none;
-  outline: none;
-  margin: 0;
-  padding: 0;
-  font-size: 12px;
-  height: 30px;
-  border-radius: 0 4px 4px 0;
-  text-indent: 8px;
-}
-
-.leaflet-control-geosearch .results {
-  background: #fff;
-}
-
-.leaflet-control-geosearch .results > * {
   line-height: 24px;
-  padding: 0 8px;
-  border: 1px solid transparent;
+  font-family: "Open Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  position: relative;
+  background-color: #fff;
+  width: 100%;
+  min-width: 240px;
+  z-index: 1;
+  border-radius: 4px;
+  transition: width .25s, min-width .25s;
+}
 
+.mapboxgl-ctrl-geocoder--input {
+  font: inherit;
+  width: 100%;
+  border: 0;
+  background-color: transparent;
+  margin: 0;
+  height: 50px;
+  color: #404040;
+  /* fallback */
+  color: rgba(0, 0, 0, 0.75);
+  padding: 6px 45px;
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 
-.leaflet-control-geosearch .results.active {
-  padding: 8px 0;
-  border-top: 1px solid #c6c6c6;
+.mapboxgl-ctrl-geocoder--input::-ms-clear {
+  display: none;
+  /* hide input clear button in IE */
 }
 
-.leaflet-control-geosearch .results > .active,
-.leaflet-control-geosearch .results > :hover {
-  background-color: #f8f8f8;
-  border-color: #c6c6c6;
-  cursor: pointer;
+.mapboxgl-ctrl-geocoder--input:focus {
+  color: #404040;
+  /* fallback */
+  color: rgba(0, 0, 0, 0.75);
+  outline: 0;
+  box-shadow: none;
+  outline: thin dotted;
 }
 
-/* add missing border to form */
-.leaflet-control-geosearch .results.active:after {
-  content: '';
-  display: block;
-  width: 0;
-  border-left: 2px solid rgba(0, 0, 0, .2);
+.mapboxgl-ctrl-geocoder .mapboxgl-ctrl-geocoder--pin-right>* {
+  z-index: 2;
   position: absolute;
-  left: -2px;
-  bottom: -2px;
-  top: 30px;
-}
-
-/* animations */
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-.leaflet-top .leaflet-control-geosearch.bar,
-.leaflet-bottom .leaflet-control-geosearch.bar {
+  right: 8px;
+  top: 7px;
   display: none;
 }
 
-.leaflet-control-geosearch.bar {
-  position: relative;
-  display: block;
-  height: auto;
-  width: 400px;
-  margin: 10px auto 0;
-  cursor: auto;
-  z-index: 1000;
+.mapboxgl-ctrl-geocoder,
+.mapboxgl-ctrl-geocoder .suggestions {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, .1);
 }
 
-.leaflet-control-geosearch.bar form {
-  position: relative;
-  top: 0;
-  left: 0;
-  display: block;
-  border: 2px solid rgba(0, 0, 0, 0.2);
+/* Collapsed */
+.mapboxgl-ctrl-geocoder.mapboxgl-ctrl-geocoder--collapsed {
+  width: 50px;
+  min-width: 50px;
+  transition: width .25s, min-width .25s;
+}
+
+/* Suggestions */
+.mapboxgl-ctrl-geocoder .suggestions {
+  background-color: #fff;
   border-radius: 4px;
-}
-
-.leaflet-control-geosearch.bar form input {
-  min-width: 100%;
-  width: 100%;
-}
-
-.leaflet-control-geosearch.bar .results.active:after {
-  opacity: .2;
-}
-
-.leaflet-right .leaflet-control-geosearch form {
-  right: 28px;
-  left: initial;
-  border-radius: 4px 0 0 4px;
-  border-left: inherit;
-  border-right: none;
-}
-
-.leaflet-control-geosearch a.reset {
-  color: black;
+  left: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
   position: absolute;
-  line-height: 30px;
-  padding: 0 8px;
-  right: 0;
-  top: 0;
-  cursor: pointer;
-  border: none;
+  width: 100%;
+  top: 110%;
+  /* fallback */
+  top: calc(100% + 6px);
+  z-index: 1000;
+  overflow: hidden;
+  font-size: 15px;
 }
 
-.leaflet-control-geosearch a.reset:hover {
-  background: #f5f5f5;
+.mapboxgl-ctrl-bottom-left .suggestions,
+.mapboxgl-ctrl-bottom-right .suggestions {
+  top: auto;
+  bottom: 100%;
+}
+
+.mapboxgl-ctrl-geocoder .suggestions>li>a {
+  cursor: default;
+  display: block;
+  padding: 6px 12px;
+  color: #404040;
+}
+
+.mapboxgl-ctrl-geocoder .suggestions>.active>a,
+.mapboxgl-ctrl-geocoder .suggestions>li>a:hover {
+  color: #404040;
+  background-color: #f3f3f3;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mapboxgl-ctrl-geocoder--suggestion-title {
+  font-weight: bold;
+}
+
+.mapboxgl-ctrl-geocoder--suggestion-title,
+.mapboxgl-ctrl-geocoder--suggestion-address {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+/* Icons */
+.mapboxgl-ctrl-geocoder--icon {
+  display: inline-block;
+  vertical-align: middle;
+  speak: none;
+  fill: #757575;
+  top: 15px;
+}
+
+.mapboxgl-ctrl-geocoder--icon-search {
+  position: absolute;
+  top: 13px;
+  left: 12px;
+  width: 23px;
+  height: 23px;
+}
+
+.mapboxgl-ctrl-geocoder--button {
+  padding: 0;
+  margin: 0;
+  border: none;
+  cursor: pointer;
+  background: #fff;
+  line-height: 1;
+}
+
+.mapboxgl-ctrl-geocoder--icon-close {
+  width: 20px;
+  height: 20px;
+  margin-top: 8px;
+  margin-right: 3px;
+}
+
+.mapboxgl-ctrl-geocoder--button:hover .mapboxgl-ctrl-geocoder--icon-close {
+  fill: #909090;
+}
+
+.mapboxgl-ctrl-geocoder--icon-loading {
+  width: 26px;
+  height: 26px;
+  margin-top: 5px;
+  margin-right: 0px;
+  -moz-animation: rotate 0.8s infinite cubic-bezier(0.45, 0.05, 0.55, 0.95);
+  -webkit-animation: rotate 0.8s infinite cubic-bezier(0.45, 0.05, 0.55, 0.95);
+  animation: rotate 0.8s infinite cubic-bezier(0.45, 0.05, 0.55, 0.95);
+}
+
+/* Animation */
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  from {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+/* Media queries*/
+@media screen and (min-width: 640px) {
+
+  .mapboxgl-ctrl-geocoder.mapboxgl-ctrl-geocoder--collapsed {
+    width: 36px;
+    min-width: 36px;
+  }
+
+  .mapboxgl-ctrl-geocoder {
+    width: 33.3333%;
+    font-size: 15px;
+    line-height: 20px;
+    max-width: 360px;
+  }
+
+  .mapboxgl-ctrl-geocoder .suggestions {
+    font-size: 13px;
+  }
+
+  .mapboxgl-ctrl-geocoder--icon {
+    top: 8px;
+  }
+
+  .mapboxgl-ctrl-geocoder--icon-close {
+    width: 16px;
+    height: 16px;
+    margin-top: 3px;
+    margin-right: 0;
+  }
+
+  .mapboxgl-ctrl-geocoder--icon-search {
+    left: 7px;
+    width: 20px;
+    height: 20px;
+  }
+
+  .mapboxgl-ctrl-geocoder--input {
+    height: 36px;
+    padding: 6px 35px;
+  }
+
+  .mapboxgl-ctrl-geocoder--icon-loading {
+    width: 26px;
+    height: 26px;
+    margin-top: -2px;
+    margin-right: -5px;
+  }
+
+  .mapbox-gl-geocoder--error {
+    color: #909090;
+    padding: 6px 12px;
+    font-size: 16px;
+    text-align: center
+  }
+
 }
