--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     padding: 8px 4px;
-    background-color: #004b4b;
+    background-color: #22543D;
     align-items: center;
 }
 
